src/objects/Homepage_Widget__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Criteria_Filter_Logic__c</fullName>
        <label>Criteria Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria__c</fullName>
        <label>Criteria</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lookup_Fields__c</fullName>
        <label>Lookup Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <label>Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preview</label>
        <type>Checkbox</type>
    </fields>
    <label>Homepage Widget</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Criteria</fullName>
        <columns>NAME</columns>
        <columns>Number__c</columns>
        <columns>Preview__c</columns>
        <columns>Criteria__c</columns>
        <columns>Criteria_Filter_Logic__c</columns>
        <filterScope>Everything</filterScope>
        <label>Criteria</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Homepage Widgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>